compile errors